Fix layout bug w/ iphone 6/7/8 screens

--- a/src/styles/AboutMe.css
+++ b/src/styles/AboutMe.css
@@ -42,7 +42,7 @@
 
 @media only screen and (max-width: 375px) {
   .AboutMe {
-    margin: 42em 0vw auto 15vw !important;
+    margin: 47em 0vw auto 15vw !important;
     width: 82vw;
   }
   .AboutMe h3 {
