--- a/src/styles/MyProjects.css
+++ b/src/styles/MyProjects.css
@@ -23,9 +23,13 @@
 }
 
 @media only screen and (max-width: 375px) {
+  #MyProjects {
+    position: relative !important;
+    top: 10vh !important;
+  }
   .MyProjects h1 {
-    width: 60vw !important;
-    margin: 0vh 0vw 0vh 16vw !important;
+    width: 65vw !important;
+    margin: 0vh 0vw 0vh 18vw !important;
   }
   .MyProjects-Projects {
     width: 60vw !important;
