--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -66,7 +66,6 @@
   }
 
   .fadeIn {
-    height: 3vh !important;
     width: 60vw !important;
   }
 }
